// Format:
// Date (mm/dd/yr)
// rNumber [Author]
// 	* Modifications.
// 	- Details.
//========================================

03/25/2010
	r288 [Jobbie]
	* Added new SC_*'s used by items 12429 to 12434.
	- These items uses its own sc together with its own status icon to match official servers implementation.
	* Fix typo in changelog.

	r287 [Jobbie]
	* Important merged up of eAthena SVN update from rev14268-71.

	r286 [Jobbie]
	* Updated some sp cost in Sorcerer skills.
	* Crystalize status must be ended when hitted by fire element.
	* Slight cleanup in status.c

	r284 [pakpil]
	* Fixed a mistake in PACKETVER that affec to to clif_displayexp. Sorry.
	- This was caussing dead mobs don't dessapear correclty in clients oldest than 2009-11-10aRagexeRE.
	* Added LG_CANNONSPEAR skill. Still need some info.
	* Fixed LG_REFLECTDAMAGE that shouldn't reduce damage reflected.	

	r283 [Rytech]
	*Small fix in the skill_db.

03/24/2010
	r282 [Rytech]
	*Added baby mount support to the job system.
	-The mounts wont be accessable until their fully coded in the needed area's in the source.

	r281 [pakpil]
	* Fixed a mistake in CR_REFLECSHIELD and LG_REFLECTDAMAGE. Follow up r280.

03/23/2010
	r280 [pakpil]
	* Added LG_REFLECTDAMAGE skill.
	- Updated CR_REFLECTSHIELD that should fail if you are under LG_REFLECTDAMAGE and viceversa.
	* Minor fix in LG_BANISHINGPOINT that should take the weapon element.

	r279 [Rytech]
	*Changed some settings back to classic mechanic's and eAthena defults to keep true to the project goals.
	-Things like max stats for 3rd jobs will by 99 for regular and 80 for babys. You can raise this if you want.
	-Changed to setting for renewal cast times to no to keep the classic casting system working.
	-Changed MAX_CHAR in mmo.h to 9, which is eA's defult, as well as the defult in diff patches.
	-MAX_LEVEL will be kept at a 150 int he source, however itl stay limited to 99 in the exp.txt