@@ -975,11 +975,62 @@ enum si_type {
 //	SI_ARMORSCROLL = 512,
 //	SI_FREYJASCROLL = 513,
 //	SI_SOULSCROLL = 514,
-//	SI_ELEMENTAL_CONTROL = 515,
-//	SI_ELEMENTAL_WAIT = 516,
-//	SI_ELEMENTAL_PASSIVE = 517,
-//	SI_ELEMENTAL_DEFENSIVE = 518,
-
+//	SI_CIRCLE_OF_FIRE = 515,
+//	SI_CIRCLE_OF_FIRE_OPTION = 516,
+//	SI_FIRE_CLOAK = 517,
+//	SI_FIRE_CLOAK_OPTION = 518,
+//	SI_WATER_SCREEN = 519,
+//	SI_WATER_SCREEN_OPTION = 520,
+//	SI_WATER_DROP = 521,
+//	SI_WATER_DROP_OPTION = 522,
+//	SI_WIND_STEP = 523,
+//	SI_WIND_STEP_OPTION = 524,
+//	SI_WIND_CURTAIN = 525,
+//	SI_WIND_CURTAIN_OPTION = 526,
+//	SI_WATER_BARRIER = 527,
+//	SI_ZEPHYR = 528,
+//	SI_SOLID_SKIN = 529,
+//	SI_SOLID_SKIN_OPTION = 530,
+//	SI_STONE_SHIELD = 531,
+//	SI_STONE_SHIELD_OPTION = 532,
+//	SI_POWER_OF_GAIA = 533,
+//	SI_EL_WAIT = 534,
+//	SI_EL_PASSIVE = 535,
+//	SI_EL_DEFENSIVE = 536,
+//	SI_EL_OFFENSIVE = 537,
+//	SI_EL_COST = 538,
+//	SI_PYROTECHNIC = 539,
+//	SI_PYROTECHNIC_OPTION = 540,
+//	SI_HEATER = 541,
+//	SI_HEATER_OPTION = 542,
+//	SI_TROPIC = 543,
+//	SI_TROPIC_OPTION = 544,
+//	SI_AQUAPLAY = 545,
+//	SI_AQUAPLAY_OPTION = 546,
+//	SI_COOLER = 547,
+//	SI_COOLER_OPTION = 548,
+//	SI_CHILLY_AIR = 549,
+//	SI_CHILLY_AIR_OPTION = 550,
+//	SI_GUST = 551,
+//	SI_GUST_OPTION = 552,
+//	SI_BLAST = 553,
+//	SI_BLAST_OPTION = 554,
+//	SI_WILD_STORM = 555,
+//	SI_WILD_STORM_OPTION = 556,
+//	SI_PETROLOGY = 557,
+//	SI_PETROLOGY_OPTION = 558,
+//	SI_CURSED_SOIL = 559,
+//	SI_CURSED_SOIL_OPTION = 560,
+//	SI_UPHEAVAL = 561,
+//	SI_UPHEAVAL_OPTION = 562,
+//	SI_TIDAL_WEAPON = 563,
+//	SI_TIDAL_WEAPON_OPTION = 564,
+//	SI_ROCK_CRUSHER = 565,
+//	SI_ROCK_CRUSHER_ATK = 566,
+//	SI_FIRE_INSIGNIA = 567,
+//	SI_WATER_INSIGNIA = 568,
+//	SI_WIND_INSIGNIA = 569,
+//	SI_EARTH_INSIGNIA = 570,
 };
 
 enum wl_spheres {
